--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <script defer src="main.js"></script>
     </head>
     <body>
-        <h1>What month is it? (DevOps 10)</h1>
+        <h1>What month is it? (DevOps 10 - CD is working)</h1>
         <h2>Current month is <span id="month">?</span></h2>
     </body>
 </html>
