--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
         <script defer src="main.js"></script>
     </head>
     <body>
-        <h1>slt moi c maxime</h1>
+        <h1>youhouuuu</h1>
     </body>
 </html>
